--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4423,10 +4423,10 @@ en:
     parking_notifications:
       index:
         matches_visible: visible
-        parking_notifications: Abandoned Records
+        parking_notifications: Parking notifications
       show:
         message: Message
-        internal_notes_html: '%{org_name} internal notes <small>not shown to user</small>'
+        internal_notes_html: '%{org_name} internal notes'
         bike: Bike
         by: Created by
         created: Created at
@@ -4986,7 +4986,7 @@ en:
       thank_you: Thank you so much for using Bike Index!
       thanks_for_using_bike_index: Thanks for using Bike Index!
     organized_skeleton:
-      abandoned_bikes: Abandoned Bikes
+      parking_notifications: Parking notifications
       add_a_bike: Add a bike
       additional_features_html: >-
         Bike Index provides additional features for verified Law Enforcement organizations.
