--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -969,10 +969,10 @@ en:
         address_or_intersection: Address or intersection
         choose_country: Choose country
         city: City
-        state: State
-        zipcode: Postal code
         publicly_display_exact_address: Publicly display exact address theft occurred
+        state: State
         where_was_it_stolen_type: Where was it %{stolen_type}?
+        zipcode: Postal code
     bike_show_overlays:
       add_a_picture_of_it: Add a picture of it, so everyone can admire its beauty!
       add_a_picture_so_people_know_what_to_look: Add a picture so people know what
@@ -1249,10 +1249,9 @@ en:
       your_full_address_is_required: Your full address is required by %{org_name}
       zipcode: Postal code
     organized_access_panel:
-      parking_notification_notes_html: '%{org_name} internal notes <small>not shown to user</small>'
       access_panel: Access Panel
       address: 'Address:'
-      already_impounded: This %{bike_type} is already impounded by %{organization_name}
+      address_or_intersection: Address or intersection
       as_a_bikeindex_ambassador_html: >-
         <em><span class="hidden-md-down">As a Bike Index ambassador,</span> you can
         mark it as recovered:</em>
@@ -1263,27 +1262,22 @@ en:
         %{org_name}
       bike_is_registered: This %{bike_type} is registered with %{org_name}
       bike_not_marked_stolen: "%{bike_type} is not marked stolen."
+      choose_country: Choose country
+      city: City
       claimed: Claimed
       contact_the_owner: Contact the owner
       creator: Creator
       edit: Edit
       email_to_deal_with_this_html: Email %{support_link} to deal with this.
-      geomessage: GeoMessage
-      impound: Impound
-      impound_are_you_sure: Are you sure you want to %{bike_type}?
-      impounded_by: By
       is_false: 'false'
       is_not_registered_html: "<em>not</em> reged with %{org_name}"
       is_registered: reged with %{org_name}
       is_true: 'true'
-      kind: Kind
       link_sticker: Link Sticker
       link_url_for_online_sighting: Link url for online sighting
       mark_bike_recovered: Mark bike recovered
-      message_owner: Message %{bike_type} owner
       missing_address: missing address
       missing_owner_name: missing user name
-      internal_notes: Internal Notes
       or_call_owner_html: "<em>Or call</em> <strong>Owner's phone number:</strong>"
       org_can_edit_bike: "%{org_name} can edit this %{bike_type}"
       org_cannot_edit: "%{org_name} can not edit"
@@ -1292,23 +1286,15 @@ en:
       organization_registered: Organization
       owner_email: Owner email
       owner_name: Owner name
+      parking_notification_notes_html: "%{org_name} internal notes <small>not shown
+        to user</small>"
       permission: Permission
-      record: Record
-      record_abandoned: Record abandoned
-      record_again: Record again
-      recorded: Recorded
-      recorder: Recorder
       registered: 'Registered:'
-      send: Send
       send_message: Send message
+      state: State
       sticker: Sticker
       sticker_code: Sticker Code
       support_email: support@bikeindex.org
-      address_or_intersection: Address or intersection
-      choose_country: Choose country
-      city: City
-      state: State
-      zipcode: Postal code
       unable_to_display_additional_information: >-
         Unable to display additional information because %{bike_type} is not registered
         with %{org_name}
@@ -1320,6 +1306,7 @@ en:
         Where did you see this %{bike_type}? If you're contacting about an ad you
         found online, include a link in the field below
       write_them_a_message: Write them a message
+      zipcode: Postal code
     pdf:
       bike_description: 'Bike description:'
       bike_serial: Bike Serial
@@ -2093,7 +2080,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -2119,7 +2106,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -4425,21 +4412,19 @@ en:
         matches_visible: visible
         parking_notifications: Parking notifications
       show:
-        message: Message
-        internal_notes_html: '%{org_name} internal notes'
         bike: Bike
         by: Created by
         created: Created at
-        none: none
+        internal_notes_html: "%{org_name} internal notes"
+        message: Message
         parking_notification: Parking Notification
       table:
+        bike: Bike
         by: By
         created: Created
         impounded: Impounded
         internal_notes: Internal Notes
         kind: Kind
-        bike: Bike
-
     stickers:
       edit:
         bike: Bike
@@ -4986,7 +4971,6 @@ en:
       thank_you: Thank you so much for using Bike Index!
       thanks_for_using_bike_index: Thanks for using Bike Index!
     organized_skeleton:
-      parking_notifications: Parking notifications
       add_a_bike: Add a bike
       additional_features_html: >-
         Bike Index provides additional features for verified Law Enforcement organizations.
@@ -5013,6 +4997,7 @@ en:
       organization_profile: "%{org_name} profile"
       other_point_of_sale_system: Other Point of Sale system?
       overview_dashboard: Dashboard
+      parking_notifications: Parking notifications
       read_a_full_explanation_html: Read a full explanation of %{link}.
       recoveries: Recoveries
       register_bikes_with_link_html: Register bikes with our <strong>%{link}</strong>
