--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -451,6 +451,7 @@ en:
         created_bikes: Created bikes
         creation_states: Creation states
         deleted_at: Deleted at
+        enabled_feature_slugs: Enabled feature slugs
         invoices: Invoices
         is_paid: Is paid
         is_suspended: Is suspended
@@ -462,7 +463,6 @@ en:
         memberships: Memberships
         name: Name
         organization_messages: Organization messages
-        paid_feature_slugs: Paid feature slugs
         parent_organization: :activerecord.models.parent_organization
         payments: Payments
         pos_kind: Pos kind
