--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1669,8 +1669,8 @@ en:
             support.
       parking_notifications:
         create:
-          parking_notificationed: Abandoned %{bike_type} recorded
-          unable_to_record: Unable to record - %{errors}
+          successfully_created: Parking Notification %{bike_type} created
+          unable_to_create: Unable to create - %{errors}
         ensure_access_to_abandoned_bikes!:
           your_org_does_not_have_access: >-
             Your organization doesn't have access to that, please contact Bike Index
@@ -3681,12 +3681,12 @@ en:
       log_in: log in
       logout: Logout
       multi_serial_search: Multi serial search
-      org_abandoned_bikes: "%{org_name} Abandoned Bikes"
       org_bikes: "%{org_name} Bikes"
       org_dashboard: "%{org_name} Dashboard"
       org_impounded_bikes: "%{org_name} Impounded Bikes"
       org_locations: "%{org_name} locations"
       org_profile: "%{org_name} profile"
+      parking_notifications: Parking notifications
       recoveries: Recoveries
       register_a_new_bike: Register a new bike
       registration_stickers: Registration stickers
@@ -4411,20 +4411,26 @@ en:
       index:
         matches_visible: visible
         parking_notifications: Parking notifications
+        search_bike_descriptions: Search bike descriptions
+        search_for_serial_number: Search for serial number
+        search_owner_email: Search owner email
       show:
+        address: Address
         bike: Bike
         by: Created by
         created: Created at
-        internal_notes_html: "%{org_name} internal notes"
+        internal_notes: Internal notes
         message: Message
         parking_notification: Parking Notification
+        repeat: Repeat
       table:
+        address: Address
         bike: Bike
         by: By
         created: Created
         impounded: Impounded
-        internal_notes: Internal Notes
-        kind: Kind
+        kind: Because
+        repeat: Repeat#
     stickers:
       edit:
         bike: Bike
@@ -4770,7 +4776,7 @@ en:
     donation_modal:
       header: Help support our efforts!
       is_a_nonprofit_html: >-
-        Bike Index is a %{blog_link}<br><strong>You</strong> fund our efforst to fight
+        Bike Index is a %{blog_link}<br><strong>You</strong> fund our efforts to fight
         bike theft!
       nonprofit_501c3: 501(c)(3) nonprofit
       skip: No donation
@@ -4981,7 +4987,6 @@ en:
       bulk_imports: Bulk Imports
       discuss: Discuss
       exports: Exports
-      geomessaging: GeoMessaging
       getting_started: Getting started
       how_integration_works: how the integration works
       impounded_bikes: Impounded Bikes
