update for cities page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3530,6 +3530,7 @@ en:
         nation.
       bike_index_unveils_partnership_with_the_c: Bike Index unveils partnership with
         the City of Palo Alto
+      bike_index_new_dashboard: New Bike Index dashboard useful for fighting bike crime
       bring_together_bike_shops_schools_municip: >-
         Bring together bike shops, schools, municipal departments, and law enforcement
         to register bikes in one system. Gone are the days of waiting for people to
