--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,7 +97,7 @@ en:
         params: Params
       bike:
         abandoned: Abandoned
-        additional_registration: Additional registration
+        extra_registration_number: Extra registration number
         all_description: All description
         approved_stolen: Approved stolen
         b_params: B params
@@ -2080,7 +2080,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2106,7 +2106,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
