--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -301,7 +301,6 @@ nl:
         origin: oorsprong
         params: params
       bike:
-        additional_registration: Extra registratie
         all_description: Alle beschrijvingen
         approved_stolen: Goedgekeurd gestolen
         b_params: B params
@@ -357,6 +356,7 @@ nl:
         zipcode: Postcode
         abandoned: Verlaten
         bike_stickers: Fietscodes
+        extra_registration_number: Extra registratienummer
       bike_organization:
         can_not_edit_claimed: Kan geclaimd niet bewerken
         deleted_at: Verwijderd om
@@ -992,7 +992,7 @@ nl:
         u_lock: Beugelslot
         u_lock_and_cable: U-slot en kabel
       organization:
-        reg_affiliation_options:
+        organization_affiliation_options:
           community_member: Gemeenschap lid
           employee: Werknemer
           student: Student
