--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1651,7 +1651,7 @@ en:
         update:
           bike_stickers_removed: Bike codes removed!
           unknown_update_action: Unknown update action!
-      manage:
+      manages:
         destroy:
           contact_support_to_delete: Please contact support@bikeindex.org to delete
             %{org_name}.
@@ -3682,6 +3682,7 @@ en:
       lightspeed_integration_panel: Lightspeed Integration Panel
       log_in: log in
       logout: Logout
+      manage_schedule: Manage scheduling
       multi_serial_search: Multi serial search
       org_bikes: "%{org_name} Bikes"
       org_dashboard: "%{org_name} Dashboard"
@@ -4357,8 +4358,25 @@ en:
         unable_to_export: Unable to export, not part of your organization
         unassign_stickers: Unassign stickers
         view_avery_labels: View Avery Labels
-    manage:
-      index:
+    manages:
+      location_fields:
+        address: Address
+        choose_country: Choose country
+        city: City
+        location_name: Location name
+        name: Name
+        phone_number: Phone number
+        remove: Remove location
+        state: State
+        street: Street
+        zipcode: Postal code
+      locations:
+        add_location: Add location
+        bike_index_partner_map: Bike Index partner map
+        display_org_on_map_html: Display <em>%{org_name}</em> on %{map_link}
+        location_settings_html: "<em>%{org_name}</em> location settings"
+        save: Save
+      show:
         abbreviation: Abbreviation
         choose_file: Choose file...
         delete_organization: Delete organization
@@ -4375,23 +4393,6 @@ en:
           Bike Index?
         select_email: Select email
         update: Update
-      location_fields:
-        address: Address
-        choose_country: Choose country
-        city: City
-        location_name: Location name
-        name: Name
-        phone_number: Phone number
-        remove: Remove
-        state: State
-        street: Street
-        zipcode: Postal code
-      locations:
-        add_location: Add location
-        bike_index_partner_map: Bike Index partner map
-        display_org_on_map_html: Display <em>%{org_name}</em> on %{map_link}
-        location_settings_html: "<em>%{org_name}</em> location settings"
-        save: Save
     messages:
       index:
         bike: Bike
@@ -5003,6 +5004,7 @@ en:
       link_to_register_html: >-
         <strong>%{link}</strong> to automatically register the bikes you sell to your
         customers.
+      manage_schedule: Manage scheduling
       multi_serial_search: Multi serial search
       organization_locations: "%{org_name} locations"
       organization_profile: "%{org_name} profile"
