heirarchy for bikes searching

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4995,7 +4995,7 @@ en:
       exports: Exports
       getting_started: Getting started
       how_integration_works: how the integration works
-      impounded_bikes: Impounded Bikes
+      impounded_bikes: Impounded
       incomplete_registrations: Incomplete registrations
       integrate_bike_index_with_ascend: Integrate Bike Index with Ascend
       integrate_bike_index_with_lightspeed: Integrate Bike Index with Lightspeed
